# retoCasas_v2

./: .dockerignore  .gitignore  Makefile  README.md  Reto_housing.ipynb  compose.yaml  docker-compose.override.yml  docker-compose.yml  exploratorio.ipynb  features_columns.joblib  lasso_houseprice_pipeline.joblib  main.tf  no_leer.txt  requirements.txt  taskdef.json  utils.py  utils_yose.py  variables.tf
.github/workflows/: deploy.yml
ML/: mlflow_setup.py  requirements.txt
ML/backend/: Dockerfile  Dockerfile.dev  app.py
ML/models/: modelpipeline2p.py  modelpipeline4p.py
ML/notebooks/: AnalisisMulticolinealidad.ipynb  DesplegarModelo.ipynb  EJEMPLO_MODELO.ipynb  analysis_saleprice.ipynb  final_model_deployment.ipynb  variables_categoricas_multicolinealidad.xlsx
ML/utils/: mlflow_flow.py  mlflow_setup.py  utils_yose.py
app/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  middleware.ts  next.config.ts  package.json
app/.next/: app-build-manifest.json  prerender-manifest.json  trace
app/drizzle/: 0000_high_viper.sql  0001_gifted_electro.sql
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
datascience/models/: 3modelpipelineGS.py  3modelpipelineRAW.py  modelpipelineRAW.py
datascience/notebooks/: COSA.ipynb  (+2 more)
docs/: TEAM1_data_dictionary.csv
notebooks/: COSA.ipynb  exploratorio_yose.ipynb  final.ipynb
server/: Dockerfile  Dockerfile.dev  README.md  app.py  database.py  ensemble.py  main.py  post_data.py  pyproject.toml  requirements.txt  test.ipynb  test.py  test_prediction.py
server/models/: weights.json
server/schemas/: consultas.py  pagos.py  users.py
server/src/: config.py  database.py  main.py  routes.py
server/src/schemas/: consultas.py  pagos.py  users.py
utils/: utils_yose.py
(+407 files in other folders)
