[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagshub>=0.6.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "uvicorn[standard]>=0.35.0",
]
