[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dagshub>=0.6.3",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib==3.10.0",
    "mlflow==2.22.0",
    "numpy==2.1.3",
    "pandas==2.3.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "scipy==1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "uvicorn[standard]>=0.35.0",
    "graphviz==0.21",
    "psutil==7.0.0",
    "pyarrow==19.0.1",
    "cffi==1.17.1",
    "uvicorn>=0.30"
]
